# sdl2-pong-cpp

./: CMakeLists.txt  ball.cpp  ball.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  headers.hpp  main.cpp  player.cpp  player.hpp  texturemanager.cpp  texturemanager.hpp
